@@ -1,3 +1,7 @@
+karma-viewport-1.0.1 (2018-03-27)
+
+  * Improved typings
+
 karma-viewport-1.0.0 (2018-03-26)
 
   * Refactored complete code base into TypeScript
